# HW2-LLM-inference-o11y-Ariel_Mitiushkin

./: REPORT.md  pyproject.toml
agent/: graph.py  prompts.py  schema.py  server.py
evals/: run_eval.py
infra/grafana/provisioning/dashboards/: serving.json
results/: eval_after_tuning.json  eval_baseline.json  eval_self_consistency.json  load_after.json  load_baseline.json  load_iter1.json  load_iter2.json  load_iter3.json
scripts/: build_dashboard.py  render_terminal_png.py  start_vllm.sh
